--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -41,6 +41,11 @@ core-ktx = "1.12.0"
 
 android-gradle-plugin = "8.2.1"
 kotlin-gradle-plugin = "1.8.21"
+junit = "4.13.2"
+androidx-test-ext-junit = "1.1.5"
+espresso-core = "3.5.1"
+appcompat = "1.6.1"
+material = "1.11.0"
 
 [libraries]
 
